# konig

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: README.md  build.zig
core/src/: board.zig  epd.zig  fen.zig  main.zig  move.zig  pgn.zig  piece.zig  regex.zig
core/zig-cache/o/1f5ba930f299f9c34551e6d5885c2fce/: builtin.zig
core/zig-cache/o/3efbeb07402342b4dfef64e0b73d7b13/: test
core/zig-cache/o/8621a0b2753c87ee4e444c17c6d1a575/: test
core/zig-cache/o/87d6ecbb640315c9c6cc5e8cb8f70314/: build
core/zig-cache/o/c2b694f7dd60876b19e4242e0aa4f4d6/: test
core/zig-cache/o/f0e2d00ce181d369d199b8986b7d00ae/: builtin.zig
notes/: naming-conventions.md  peter-ellis-jones-move-generation.md  state-of-the-art.md
rust-core/: Cargo.toml
rust-core/src/: core.rs  io.rs  lib.rs  standard.rs
rust-core/src/core/: board.rs  index.rs  move.rs  piece.rs  pieces.rs  position.rs  positions.rs
rust-core/src/io/: fen.rs  san.rs
rust-core/src/standard/: board.rs  index.rs  move.rs  piece.rs
src/: bitboard.rs  core.rs  io.rs  lib.rs  quadboard.rs  standard.rs
src/bitboard/: bitboard.rs  quadboard.rs
src/core/: board.rs  index.rs  move.rs  piece.rs  position.rs
src/io/: fen.rs  san.rs
src/standard/: bitboard.rs  board.rs  index.rs  move.rs  piece.rs  square.rs
tests/: fen-api.rs  fen-standard.rs
zig-core/: build.zig
zig-core/include/: regez.h
zig-core/src/: cli.zig  piece.zig  regex.zig
